<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"> <!-- Background image -->

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#1E88E5"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Instruction Text -->
    <TextView
        android:id="@+id/instructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_the_option"
        android:textColor="#333333"
        android:textStyle="bold"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginTop="14dp" />

    <!-- First CardView for Upload -->
    <androidx.cardview.widget.CardView
        android:id="@+id/uploadCard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/instructionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="18dp"
            tools:ignore="UseCompoundDrawables">

            <!-- Upload Icon -->
            <ImageView
                android:id="@+id/uploadIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/upload"
                android:contentDescription="@string/todo"
                android:layout_marginEnd="16dp" />

            <!-- Upload Text -->
            <TextView
                android:id="@+id/uploadText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_prescription"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="#333333" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Second CardView for Search -->
    <androidx.cardview.widget.CardView
        android:id="@+id/searchCard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/uploadCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <!-- Search Icon -->
            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/search"
                android:contentDescription="@string/todo"
                android:layout_marginEnd="16dp" />

            <!-- Search Text -->
            <TextView
                android:id="@+id/searchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_medicine"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="#333333" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
